--- a/contact.html
+++ b/contact.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="MICHAEL TSO, Hydrologist/ Geophysicist/ Engineer">
 
-        <link rel="alternate"  href="http://localhost:8000/feeds/all.atom.xml" type="application/atom+xml" title="MICHAEL TSO Full Atom Feed"/>
+        <link rel="alternate"  href="https://cmtso.github.io/feeds/all.atom.xml" type="application/atom+xml" title="MICHAEL TSO Full Atom Feed"/>
 
         <title>Contact // MICHAEL TSO // Hydrologist/ Geophysicist/ Engineer</title>
 
 
-    <link rel="stylesheet" href="http://localhost:8000/theme/css/pure.css">
+    <link rel="stylesheet" href="https://cmtso.github.io/theme/css/pure.css">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
-    <link rel="stylesheet" href="http://localhost:8000/theme/style.css">
-    <!--<link rel="stylesheet" type="text/css" href="http://localhost:8000/javascript/styles/style.css">-->
-    <!--<link rel="stylesheet" type="text/css" href="http://localhost:8000/javascript/styles/timesheet.css">-->
-    <!--<link rel="stylesheet" type="text/css" href="http://localhost:8000/javascript/styles/timesheet-white.css">-->
+    <link rel="stylesheet" href="https://cmtso.github.io/theme/style.css">
+    <!--<link rel="stylesheet" type="text/css" href="https://cmtso.github.io/javascript/styles/style.css">-->
+    <!--<link rel="stylesheet" type="text/css" href="https://cmtso.github.io/javascript/styles/timesheet.css">-->
+    <!--<link rel="stylesheet" type="text/css" href="https://cmtso.github.io/javascript/styles/timesheet-white.css">-->
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
       crossorigin="anonymous">
     </script>
-    <!--<script src="http://localhost:8000/javascript/script/timesheet.min.js" type="text/javascript"></script>-->
-    <!--<script type="text/javascript" src="http://localhost:8000/javascript/script/lib.js"></script>-->
-    <!--<script type="text/javascript" src="http://localhost:8000/javascript/script/main.js"></script>-->
+    <!--<script src="https://cmtso.github.io/javascript/script/timesheet.min.js" type="text/javascript"></script>-->
+    <!--<script type="text/javascript" src="https://cmtso.github.io/javascript/script/lib.js"></script>-->
+    <!--<script type="text/javascript" src="https://cmtso.github.io/javascript/script/main.js"></script>-->
 </head>
 
 <body>
@@ -35,14 +35,14 @@
                     <header class="header">
                         <hgroup>
                             <img class="avatar" src="static/me_elvanto.png">
-                            <h1 class="brand-main"><a href="http://localhost:8000">MICHAEL TSO</a></h1>
+                            <h1 class="brand-main"><a href="https://cmtso.github.io">MICHAEL TSO</a></h1>
                             <p class="tagline">Hydrologist/ Geophysicist/ Engineer</p>
-                                <p class="links"><a href="http://localhost:8000/">About</a></p>
-                                <p class="links"><a href="http://localhost:8000/cv">Curriculum Vitae</a></p>
-                                <p class="links"><a href="http://localhost:8000/thesis">Dissertation</a></p>
-                                <p class="links"><a href="http://localhost:8000/publications">Publications</a></p>
-                                <p class="links"><a href="http://localhost:8000/fieldwork">Field Excursions</a></p>
-                                <p class="links"><a href="http://localhost:8000/contact">Contact</a></p>
+                                <p class="links"><a href="https://cmtso.github.io/">About</a></p>
+                                <p class="links"><a href="https://cmtso.github.io/cv">Curriculum Vitae</a></p>
+                                <p class="links"><a href="https://cmtso.github.io/thesis">Dissertation</a></p>
+                                <p class="links"><a href="https://cmtso.github.io/publications">Publications</a></p>
+                                <p class="links"><a href="https://cmtso.github.io/fieldwork">Field Excursions</a></p>
+                                <p class="links"><a href="https://cmtso.github.io/contact">Contact</a></p>
                                 <p class="social">
                                     <a href="https://scholar.google.com/citations?user=SpbJC1IAAAAJ&hl=en", target="_blank">
                                         <i class="icon-google-scholar" style="font-size: 32px;"></i>
@@ -102,7 +102,7 @@
 <footer class="footer">
     <p align="right">&copy; MICHAEL TSO &ndash;
         Built with <a target="_blank" href="https://github.com/PurePelicanTheme/pure-single">Pure Theme</a>
-        for <a target="_blank" href="http://blog.getpelican.com/">Pelican</a> - Last updated on <a target="_blank" href=https://github.com/florian-wagner/website/commit/b88491674c8fd385003e09f153ab8fae86e79934>2019-08-16</a>.
+        for <a target="_blank" href="http://blog.getpelican.com/">Pelican</a> - Last updated on <a target="_blank" href=https://github.com/florian-wagner/website/commit/b88491674c8fd385003e09f153ab8fae86e79934>2019-08-17</a>.
     </p>
 </footer>    </div>
     </div>
