--- a/contact_failed.html
+++ b/contact_failed.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="MICHAEL TSO, Hydrologist/ Geophysicist/ Engineer">
+    <meta name="description" content="MICHAEL TSO, Environmental Data science">
 
         <link rel="alternate"  href="https://cmtso.github.io/feeds/all.atom.xml" type="application/atom+xml" title="MICHAEL TSO Full Atom Feed"/>
 
-        <title>Contact // MICHAEL TSO // Hydrologist/ Geophysicist/ Engineer</title>
+        <title>Contact // MICHAEL TSO // Environmental Data science</title>
 
+    <link href="http://localhost:8000/static/favicon.ico" rel="icon">
 
     <link rel="stylesheet" href="https://cmtso.github.io/theme/css/pure.css">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
@@ -30,18 +31,20 @@
 <body>
     <div class="pure-g-r" id="layout">
         <div class="sidebar pure-u">
-            <div class="cover-img" style="background-image: url('static/bg/waterfall1.jpeg')">
+            <div class="cover-img" style="background-image: url('http://localhost:8000/static/bg/waterfall1.jpeg')">
                 <div class="cover-body">
                     <header class="header">
                         <hgroup>
-                            <img class="avatar" src="static/me_elvanto.png">
+                            <img class="avatar" src="http://localhost:8000/static/me_elvanto.png">
                             <h1 class="brand-main"><a href="https://cmtso.github.io">MICHAEL TSO</a></h1>
-                            <p class="tagline">Hydrologist/ Geophysicist/ Engineer</p>
+                            <p class="tagline">Environmental Data science</p>
                                 <p class="links"><a href="https://cmtso.github.io/">About</a></p>
                                 <p class="links"><a href="https://cmtso.github.io/cv">Curriculum Vitae</a></p>
+                                <p class="links"><a href="https://cmtso.github.io/research">Research Highlights</a></p>
                                 <p class="links"><a href="https://cmtso.github.io/thesis">Dissertation</a></p>
                                 <p class="links"><a href="https://cmtso.github.io/publications">Publications</a></p>
                                 <p class="links"><a href="https://cmtso.github.io/fieldwork">Field Excursions</a></p>
+                                <p class="links"><a href="https://cmtso.github.io/blog">Blog</a></p>
                                 <p class="links"><a href="https://cmtso.github.io/contact">Contact</a></p>
                                 <p class="social">
                                     <a href="https://scholar.google.com/citations?user=SpbJC1IAAAAJ&hl=en", target="_blank">
@@ -56,6 +59,9 @@
                                     <a href="https://www.linkedin.com/in/cmtso", target="_blank">
                                         <i class="icon-linkedin" style="font-size: 32px;"></i>
                                     </a>
+                                    <a href="https://github.com/cmtso", target="_blank">
+                                        <i class="icon-github" style="font-size: 32px;"></i>
+                                    </a>
                                 </p>
                         </hgroup>
                     </header>
@@ -64,7 +70,8 @@
         </div>
     <div class="pure-u">
         <div class="content">
-            <h1 class="content-subhead">Contact</h1>
+            <h1 class="content-subhead"><p class="first last">Contact</p>
+</h1>
             <p><div class="section" id="sorry">
 <h2>Sorry!</h2>
 <p>An error occurred. Please go back, fill out all fields, and try again.</p>
@@ -76,7 +83,7 @@
 <footer class="footer">
     <p align="right">&copy; MICHAEL TSO &ndash;
         Built with <a target="_blank" href="https://github.com/PurePelicanTheme/pure-single">Pure Theme</a>
-        for <a target="_blank" href="http://blog.getpelican.com/">Pelican</a> - Last updated on <a target="_blank" href=https://github.com/florian-wagner/website/commit/b88491674c8fd385003e09f153ab8fae86e79934>2019-08-17</a>.
+        for <a target="_blank" href="http://blog.getpelican.com/">Pelican</a> - Last updated on <a target="_blank" href=https://github.com/cmtso/website/commit/59bcdcb9442aa478c7544e9f95807e8abbf78050>2020-06-23</a>.
     </p>
 </footer>    </div>
     </div>
