fix background image URL

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 
         <title>Contact // MICHAEL TSO // Environmental Data science</title>
 
-    <link href="http://localhost:8000/static/favicon.ico" rel="icon">
+    <link href="https://cmtso.github.io/static/favicon.ico" rel="icon">
 
     <link rel="stylesheet" href="https://cmtso.github.io/theme/css/pure.css">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
@@ -31,11 +31,11 @@
 <body>
     <div class="pure-g-r" id="layout">
         <div class="sidebar pure-u">
-            <div class="cover-img" style="background-image: url('http://localhost:8000/static/bg/waterfall1.jpeg')">
+            <div class="cover-img" style="background-image: url('https://cmtso.github.io/static/bg/waterfall1.jpeg')">
                 <div class="cover-body">
                     <header class="header">
                         <hgroup>
-                            <img class="avatar" src="http://localhost:8000/static/me_elvanto.png">
+                            <img class="avatar" src="https://cmtso.github.io/static/me_elvanto.png">
                             <h1 class="brand-main"><a href="https://cmtso.github.io">MICHAEL TSO</a></h1>
                             <p class="tagline">Environmental Data science</p>
                                 <p class="links"><a href="https://cmtso.github.io/">About</a></p>
