--- a/tags.html
+++ b/tags.html
@@ -40,7 +40,6 @@
                             <p class="tagline">Environmental Data science</p>
                                 <p class="links"><a href="https://cmtso.github.io/">About</a></p>
                                 <p class="links"><a href="https://cmtso.github.io/cv">Curriculum Vitae</a></p>
-                                <p class="links"><a href="https://cmtso.github.io/research">Research Highlights</a></p>
                                 <p class="links"><a href="https://cmtso.github.io/thesis">Dissertation</a></p>
                                 <p class="links"><a href="https://cmtso.github.io/publications">Publications</a></p>
                                 <p class="links"><a href="https://cmtso.github.io/fieldwork">Field Excursions</a></p>
@@ -71,9 +70,14 @@
     <h1>Tags for MICHAEL TSO</h1>
     <ul>
         <li><a href="https://cmtso.github.io/tag/awesome">awesome</a> (1)</li>
+        <li><a href="https://cmtso.github.io/tag/jupyterlab">JupyterLab</a> (1)</li>
+        <li><a href="https://cmtso.github.io/tag/leaflet">leaflet</a> (1)</li>
+        <li><a href="https://cmtso.github.io/tag/localhost">localhost</a> (1)</li>
+        <li><a href="https://cmtso.github.io/tag/pbms">PBMS</a> (1)</li>
         <li><a href="https://cmtso.github.io/tag/python">python</a> (1)</li>
-        <li><a href="https://cmtso.github.io/tag/r">R</a> (1)</li>
+        <li><a href="https://cmtso.github.io/tag/r">R</a> (2)</li>
         <li><a href="https://cmtso.github.io/tag/reticulate">reticulate</a> (1)</li>
+        <li><a href="https://cmtso.github.io/tag/shiny">shiny</a> (1)</li>
         <li><a href="https://cmtso.github.io/tag/thats">thats</a> (1)</li>
     </ul>
     </div>
