--- a/contact_failed.html
+++ b/contact_failed.html
@@ -40,7 +40,6 @@
                             <p class="tagline">Environmental Data science</p>
                                 <p class="links"><a href="https://cmtso.github.io/">About</a></p>
                                 <p class="links"><a href="https://cmtso.github.io/cv">Curriculum Vitae</a></p>
-                                <p class="links"><a href="https://cmtso.github.io/research">Research Highlights</a></p>
                                 <p class="links"><a href="https://cmtso.github.io/thesis">Dissertation</a></p>
                                 <p class="links"><a href="https://cmtso.github.io/publications">Publications</a></p>
                                 <p class="links"><a href="https://cmtso.github.io/fieldwork">Field Excursions</a></p>
@@ -83,7 +82,7 @@
 <footer class="footer">
     <p align="right">&copy; MICHAEL TSO &ndash;
         Built with <a target="_blank" href="https://github.com/PurePelicanTheme/pure-single">Pure Theme</a>
-        for <a target="_blank" href="http://blog.getpelican.com/">Pelican</a> - Last updated on <a target="_blank" href=https://github.com/cmtso/website/commit/59bcdcb9442aa478c7544e9f95807e8abbf78050>2020-06-23</a>.
+        for <a target="_blank" href="http://blog.getpelican.com/">Pelican</a> - Last updated on <a target="_blank" href=>2021-01-15</a>.
     </p>
 </footer>    </div>
     </div>
