--- a/thesis.html
+++ b/thesis.html
@@ -40,7 +40,6 @@
                             <p class="tagline">Environmental Data science</p>
                                 <p class="links"><a href="https://cmtso.github.io/">About</a></p>
                                 <p class="links"><a href="https://cmtso.github.io/cv">Curriculum Vitae</a></p>
-                                <p class="links"><a href="https://cmtso.github.io/research">Research Highlights</a></p>
                                 <p class="links"><a href="https://cmtso.github.io/thesis">Dissertation</a></p>
                                 <p class="links"><a href="https://cmtso.github.io/publications">Publications</a></p>
                                 <p class="links"><a href="https://cmtso.github.io/fieldwork">Field Excursions</a></p>
@@ -79,6 +78,16 @@
 <p>[1] Kuras et al. (2016) Science of the Total Environment. DOI: 10.1016/j.scitotenv.2016.04.212</p>
 <p>[2] Tso et al. (2017) Journal of Applied Geophysics. DOI: 10.1016/j.jappgeo.2017.09.009</p>
 <img alt="coupled" src="static/Kuras_2016_fig1.png" style="width: 80%;" />
+<p>Uncertainty in hydrogeophysics
+For example, how can we quantify the uncertainty in geophysical images and how this uncertainty translates to hydrological information ?
+Data fusion</p>
+<img alt="coupled" src="http://www.es.lancs.ac.uk/people/amb/Research/Uncertainty.gif" style="width: 80%;" />
+<p>(gif produced by Michael Tso, Lancaster University)</p>
+<p>Hydrogeophysical data fusion.
+For example, how can we incorporate knowledge of hydrological processes to constrain our geophysical inversions?
+Data fusion</p>
+<img alt="coupled" src="http://www.es.lancs.ac.uk/people/amb/Research/Plume.gif" style="width: 80%;" />
+<p>(gif produced by Michael Tso, Lancaster University)</p>
 </div><div class="pure-u-1-3"><div align="right"><a class="reference external image-reference" href="https://eprints.lancs.ac.uk/id/eprint/141574/1/2019tsophd.pdf"><img alt="Cover page" src="static/Screenshot_lancs_thesis.png" style="width: 90%;" /></a>
 </div></div><p class="sidenote">Tso, Chak-Hau Michael (2019). Enhancing the information content
 of geophysical data for nuclear site characterisation. Lancaster University PhD thesis.
@@ -90,7 +99,7 @@ of geophysical data for nuclear site characterisation. Lancaster University PhD 
 <footer class="footer">
     <p align="right">&copy; MICHAEL TSO &ndash;
         Built with <a target="_blank" href="https://github.com/PurePelicanTheme/pure-single">Pure Theme</a>
-        for <a target="_blank" href="http://blog.getpelican.com/">Pelican</a> - Last updated on <a target="_blank" href=https://github.com/cmtso/website/commit/59bcdcb9442aa478c7544e9f95807e8abbf78050>2020-06-23</a>.
+        for <a target="_blank" href="http://blog.getpelican.com/">Pelican</a> - Last updated on <a target="_blank" href=>2021-01-15</a>.
     </p>
 </footer>    </div>
     </div>
