update publication and a post

--- a/research2.html
+++ b/research2.html
@@ -70,7 +70,8 @@
     <div class="pure-u">
         <div class="content">
             <h1 class="content-subhead"><p>Research highlights</p></h1>
-            <p><p><body></p>
+            <p><body>
+
 <div class="slideshow-container">
 
 <div class="mySlides fade">
@@ -101,8 +102,8 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
 </div>
+<br>
 
-<p><br></p>
 <div style="text-align:center">
   <span class="dot" onclick="currentSlide(1)"></span> 
   <span class="dot" onclick="currentSlide(2)"></span> 
@@ -139,7 +140,8 @@ function showSlides(n) {
 }
 </script>
 
-<p></body></p>
+</body>
+
 <script>
 var slideIndex = 1;
 showSlides(slideIndex);
@@ -169,14 +171,14 @@ function showSlides(n) {
 }
 </script>
 
-<p></body></p></p>
+</body></p>
 
         </div>
 
 <footer class="footer">
     <p align="right">&copy; MICHAEL TSO &ndash;
         Built with <a target="_blank" href="https://github.com/PurePelicanTheme/pure-single">Pure Theme</a>
-        for <a target="_blank" href="http://blog.getpelican.com/">Pelican</a> - Last updated on <a target="_blank" href=>2021-01-15</a>.
+        for <a target="_blank" href="http://blog.getpelican.com/">Pelican</a> - Last updated on <a target="_blank" href=>2021-09-17</a>.
     </p>
 </footer>    </div>
     </div>
