--- a/tags.html
+++ b/tags.html
@@ -71,11 +71,12 @@
     <ul>
         <li><a href="https://cmtso.github.io/tag/awesome">awesome</a> (1)</li>
         <li><a href="https://cmtso.github.io/tag/jupyterlab">JupyterLab</a> (1)</li>
+        <li><a href="https://cmtso.github.io/tag/latex">LaTex</a> (1)</li>
         <li><a href="https://cmtso.github.io/tag/leaflet">leaflet</a> (1)</li>
         <li><a href="https://cmtso.github.io/tag/localhost">localhost</a> (1)</li>
         <li><a href="https://cmtso.github.io/tag/pbms">PBMS</a> (1)</li>
         <li><a href="https://cmtso.github.io/tag/python">python</a> (1)</li>
-        <li><a href="https://cmtso.github.io/tag/r">R</a> (2)</li>
+        <li><a href="https://cmtso.github.io/tag/r">R</a> (3)</li>
         <li><a href="https://cmtso.github.io/tag/reticulate">reticulate</a> (1)</li>
         <li><a href="https://cmtso.github.io/tag/shiny">shiny</a> (1)</li>
         <li><a href="https://cmtso.github.io/tag/thats">thats</a> (1)</li>
